--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,7 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
-  }
+  },
+  
+  "proxy": "http://localhost:4000"
 }
