--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -50,6 +51,5 @@
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
   },
-  
   "proxy": "http://localhost:4000"
 }
