--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "html2pdf.js": "^0.10.3",
     "mini-css-extract-plugin": "^2.5.3",
     "num-to-words": "^0.2.1",
     "react": "^17.0.2",
